--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,9 @@ NODE_ENV=
 PORT=
 MONGO_URI=
 JWT_SECRET=
+JWT_EXPIRES_IN=1h
 CORS_ORIGIN=
 LOG_FILE_PATH=
+LOG_LEVEL=info
+API_PREFIX=/api
+API_VERSION=v1
